--- a/app/src/main/res/layout/item_listview.xml
+++ b/app/src/main/res/layout/item_listview.xml
@@ -31,7 +31,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/mTitle"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="17dp"
@@ -40,7 +40,7 @@
             />
 
         <TextView
-            android:id="@+id/mContent"
+            android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
